# live-chart

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NEWS.md  README.md  codecov.yml  meson.build  meson_options.txt
.github/workflows/: main.yml
builder/: configuration.vala  data.vala  datasource.vala  main.vala  meson.build
docs/: index.html
docs/Livechart/: LiveChart.Area.Area.html  LiveChart.Area.draw.html  LiveChart.Area.get_bounding_box.html  LiveChart.Area.html  LiveChart.Area.main_color.html  LiveChart.Area.visible.html  LiveChart.AutoPadding.BOTTOM.html  LiveChart.AutoPadding.LEFT.html  LiveChart.AutoPadding.NONE.html  LiveChart.AutoPadding.RIGHT.html  LiveChart.AutoPadding.TOP.html  LiveChart.AutoPadding.html  LiveChart.Background.Background.html  LiveChart.Background.color.html  LiveChart.Background.draw.html  LiveChart.Background.get_bounding_box.html  LiveChart.Background.html  LiveChart.Background.main_color.html  LiveChart.Background.visible.html  LiveChart.Bar.Bar.html  LiveChart.Bar.draw.html  LiveChart.Bar.html  LiveChart.BezierCurve.c0.html  LiveChart.BezierCurve.c1.html  LiveChart.BezierCurve.c2.html  LiveChart.BezierCurve.c3.html  LiveChart.BezierCurve.html  LiveChart.BezierIntersector.BezierIntersector.html  LiveChart.BezierIntersector.html  LiveChart.BezierIntersector.intersect.html  LiveChart.Boundaries.height.html  LiveChart.Boundaries.html  LiveChart.Boundaries.width.html  LiveChart.Boundaries.x.html  LiveChart.Boundaries.y.html  LiveChart.Boundary.html  LiveChart.Boundary.max.html  LiveChart.Boundary.min.html  LiveChart.BoundingBox.height.html  LiveChart.BoundingBox.html  (+399 more)
examples/: axis-configuration.vala  basic.vala  bounds-and-thresholds.vala  configure-labels.vala  demo.vala  fixed-max.vala  hide-parts.vala  live-chart-usec.vala  live-chart.vala  meson.build  other-configuration.vala  remove-serie.vala  replace-chart.vala  static-chart.vala  static-renderer.vala
examples/experimental/: basic.vala  bounds-and-thresholds.vala  demo.vala  experimental-static-chart.vala  fixed-max.vala  hide-parts.vala  other-configuration.vala
src/: arbitrary_line.vala  area.vala  axis.vala  background.vala  bar.vala  bezier.vala  bounds.vala  chart.vala  config.vala  curve.vala  debug.vala  density.vala  drawable.vala  drawable_serie.vala  font.vala  geometry.vala  gradient.vala  grid.vala  intersections.vala  intersectors.vala  labels.vala  legend.vala  limits.vala  line.vala  line_area.vala  max_bound_line.vala  meson.build  min_bound_line.vala  path.vala  point.vala  points.vala  region.vala  serie.vala  serie_renderer.vala  series.vala  smooth_line.vala  smooth_line_area.vala  threshold_line.vala  time_seek.vala  utils.vala  (+2 more)
src/region/: bezier_intersector.vala  curve_resolver.vala  intersections.vala  region.vala  segment_intersector.vala  smooth_line_resolver.vala
src/static/: static_chart.vala  static_grid.vala  static_line.vala  static_points.vala  static_serie.vala  static_serie_renderer.vala  static_series.vala  static_values.vala
tests/: area.vala  axis.vala  background.vala  bar.vala  bounds.vala  cairo.vala  chart.vala  config.vala  experimental_chart.vala  experimental_serie.vala  fakes.vala  geometry.vala  grid.vala  intersectors.vala  legend.vala  limits.vala  line.vala  line_area.vala  max_bound_line.vala  meson.build  min_bound_line.vala  points.vala  region.vala  runner.vala  serie.vala  series.vala  smooth_line.vala  smooth_line_area.vala  threshold_line.vala  time-chart.vala  time-serie.vala  utils.vala  values.vala
tests/region/: bezier_intersector.vala  curve_resolver.vala  segment_intersector.vala  segment_resolver.vala  smooth_line_resolver.vala
