executable('example', 'live-chart.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-fixed-max', 'fixed-max.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-hide-parts', 'hide-parts.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-configure-labels', 'configure-labels.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-remove-serie', 'remove-serie.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-replace-chart', 'replace-chart.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-static-renderer', 'static-renderer.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-static-chart', 'static-chart.vala', dependencies: deps + [livechart_dep], build_by_default: false)
executable('example-usec', 'live-chart-usec.vala', dependencies: deps + [livechart_dep], build_by_default: false)
